--- a/src/components/PageComponents/Teams/Team/Team.css
+++ b/src/components/PageComponents/Teams/Team/Team.css
@@ -1,5 +1,100 @@
 .Team{
-    height: 200px;
-    width: 25%;
-    border: 2px solid black;
+    height: 100px;
+    width: 100%;
+    margin-bottom: 40px;
+    background-color: white;
+    border-radius: 40px;
+    box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
+    cursor: pointer;
+    transition: 0.4s;
 }
+
+.Team .TeamLogo {
+    width: inherit;
+    height: inherit;
+    border-radius: 40px;
+    background-color: black;
+}
+
+.Team .TeamLogo img {
+    width: inherit;
+    height: inherit;
+    border-radius: 40px;
+    object-fit: cover;
+    opacity: 0.35;
+}
+
+.Team .TeamName {
+    text-align: center;
+    color: white;
+    border-radius: 0px 0px 40px 40px;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+    margin-top: -100px;
+    height: 40px;
+    opacity: 0.99;
+}
+
+.Team .TeamSeed{
+    color: white;
+    text-align: center;
+    border-radius: 0px 0px 40px 40px;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 15px;
+    margin-top: -10px;
+    height: 40px;
+    opacity: 0.99;
+
+}
+
+.Team:hover {
+    transform: scale(0.9, 0.9);
+    box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), -5px -5px 30px 15px rgba(0,0,0,0.22);
+}
+
+.Team:hover .TeamName {
+    opacity: 0;
+}
+
+.Team:hover .TeamSeed {
+    opacity: 0;
+}
+
+.Team:hover .TeamLogo img {
+    opacity: 1;
+}
+
+@media (min-width: 500px){
+    .Team .TeamName {
+        font-size: 30px;
+        margin-top: -105px;
+    }
+    
+    .Team .TeamSeed{
+        font-size: 12px;
+        margin-top: 0px;    
+    }
+}
+
+@media (min-width: 768px){
+    .Team{
+        height: 200px;
+    }
+
+    .Team .TeamName {
+        font-size: 50px;
+        margin-top: -190px;
+    }
+    
+    .Team .TeamSeed{
+        font-size: 20px;
+        margin-top: 65px;    
+    }
+}
+
+@media (min-width: 1200px){
+}
+
+
