--- a/src/components/PageComponents/Teams/Teams.css
+++ b/src/components/PageComponents/Teams/Teams.css
@@ -1,8 +1,6 @@
 .TeamsPage{
     width: 100%;
     margin: 0;
-    padding: 0;
-    padding-top: 30px;
     padding-bottom: 30px;
     text-align: center;
     background: linear-gradient(90deg, rgba(254,127,45,1) 0%, rgba(65,65,221,1) 50%, rgba(97,155,138,1) 100%);
@@ -14,6 +12,25 @@
     width: 60%;
     display: block;
     justify-content: space-around;
+}
+
+.Teams .col{
+    padding-top: 30px;
+}
+
+.Teams h2{
+    margin-bottom: 30px;
+    padding: 0;
+    margin: 0;
+    font-size: 50px;
+    text-emphasis: bold;
+    color: white;
+}
+
+.Teams .divisor{
+    width: 100%;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.548);
+    margin-bottom: 40px;
 }
 
 @media (min-width: 1200px){
