--- a/src/components/PageComponents/Teams/Teams.css
+++ b/src/components/PageComponents/Teams/Teams.css
@@ -1,7 +1,7 @@
 .TeamsPage{
     width: 100%;
     margin: 0;
-    padding-bottom: 30px;
+    padding: 10px 0;
     text-align: center;
     background: linear-gradient(90deg, rgba(254,127,45,1) 0%, rgba(65,65,221,1) 50%, rgba(97,155,138,1) 100%);
 }
@@ -22,7 +22,7 @@
     margin-bottom: 30px;
     padding: 0;
     margin: 0;
-    font-size: 50px;
+    font-size: 40px;
     text-emphasis: bold;
     color: white;
 }
