--- a/src/App.css
+++ b/src/App.css
@@ -10,18 +10,33 @@
   text-align: center;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 .App nav .Title{
   color: orange;
   font-size: 30px;
-  font-family: 'Pacifico', cursive;
   font-family: 'Permanent Marker', cursive;
 }
 
 .App nav .Title span{
   margin-right: 30px;
+}
+
+.App nav i{
+  color: orange;
+  font-size: 30px;
+  padding: 5px;
+  border: 1px solid orange;
+  border-radius: 10%;
+  transition: 0.2s;
+}
+
+
+.App nav i:hover{
+  color: white;
+  border: 1px solid white;
+  transform: scale(1.1, 1.1);
 }
 
 @media(min-width: 500px){
