--- a/src/components/PageComponents/Roster/Roster.css
+++ b/src/components/PageComponents/Roster/Roster.css
@@ -6,6 +6,15 @@
     text-align: center;
 }
 
+.RosterPage .TeamName{
+    margin: auto;
+    padding: 0;
+    font-family: 'Permanent Marker', cursive;
+    font-size: 100px;
+    letter-spacing: 2px;
+    animation: pulse 2s infinite ease-in-out;
+}
+
 .RosterPage .Roster{
     display: block;
 }
@@ -20,10 +29,23 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
+        padding: 0 10%;
     }
 
     .RosterPage .Roster .col{
-        width: 30%;
+        width: 50%;
         margin: 20px 0;
     }
 }
+
+@keyframes pulse {
+    0% {
+        transform: scale(1, 1);
+    }
+    50% {
+        transform: scale(1.3, 1.3);
+    }
+    100% {
+        transform: scale(1, 1);
+    }
+  }
