--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -13,8 +13,8 @@
 
 .PlayerCardShow{
     background-color: transparent;
-    width: 500px;
-    height: 600px;
+    width: 300px;
+    height: 400px;
     perspective: 1000px; /* Remove this if you don't want the 3D effect */
     border-radius: 10%;
     margin: 10px auto;
@@ -67,6 +67,7 @@ color: black;
 /* Style the back side */
 .CardBack {
 background-color: #bbb;
+font-size: 13px;
 color: black;
 transform: rotateY(180deg);
 }
@@ -86,20 +87,22 @@ transition: 0.5s;
 
 .CardBack .NamePos{
     width: 100%;
-    height: 100px;
+    height: 60px;
     display: flex;
     justify-content: space-around;
 }
 
-.CardBack .NamePos .Name{
+.CardBack .NamePos div{
     width: 40%;
 }
 
-.CardBack .NamePos .Pos{
-    width: 40%;
+.CardBack p{
+    margin-bottom: 2px;
+    margin-top: 5px;
 }
 
 .CardBack .NamePos .vDivider{
+    margin-top: 2px;
     padding: auto 10px;
     width: 2px;
     border-right: 2px solid black;
@@ -107,10 +110,125 @@ transition: 0.5s;
 }
 
 .CardBack .divider{
-    margin: auto 5px;
+    margin: 2px 5px;
     height: 2px;
     border-bottom: 2px solid black;
     opacity: 0.3;
+}
+
+.CardBack .PhyInfo{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.CardBack .PhyInfo div{
+    width: 40%;
+}
+
+.CardBack .PhyInfo .vDivider{
+    margin-top: 2px;
+    padding: auto 10px;
+    width: 2px;
+    border-right: 2px solid black;
+    opacity: 0.3;
+}
+
+.CardBack .StatsInfo{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.CardBack .StatsInfo div{
+    width: 30%;
+}
+
+.CardBack .TeamInfo{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.CardBack .TeamInfo button{
+    width: 250px;
+    height: 60px;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10%;
+    border: none;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.CardBack .TeamInfo button img{
+    width: inherit;
+    margin: 0;
+    height: 50px;
+    object-fit: cover;
+}
+
+.CardBack .TeamInfo button:hover{
+    transform: scale(1.1, 1.1);
+    box-shadow: 2px 2px 15px 7px rgba(100, 149, 237, 0.25), -2px -2px 15px 7px rgba(100, 149, 237, 0.22);
+}
+
+@media(min-width: 768px){
+    .PlayerCard {
+        width: 300px;
+        height: 400px;
+    }
+
+    .PlayerCardShow{
+        width: 500px;
+        height: 600px;
+    }
+
+    .CardFront h2{
+        margin-top: 20px;
+        font-size: 30px;
+    }
+
+    .CardFront img{
+        height: 250px;
+    }
+
+    .CardBack .NamePos{
+        height: 120px;
+        font-size: 20px;
+    }
+
+    .CardBack .NamePos div{
+        margin-top: 20px;
+    }
+
+    .CardBack .PhyInfo{
+        height: 180px;
+        font-size: 20px;
+    }
+
+    .CardBack .PhyInfo div{
+        margin-top: 20px;
+    }
+
+    .CardBack .StatsInfo{
+        height: 80px;
+        font-size: 20px;
+    }
+
+    .CardBack .PhyInfo div{
+        margin-top: 20px;
+    }
+
+    .CardBack .TeamInfo button:hover{
+        transform: scale(1.3, 1.3);
+    }
+
 }
 
 
@@ -131,5 +249,32 @@ transition: 0.5s;
         padding: 20px 0;
         height: 250px;
         object-fit: contain;
+    }
+
+    .CardBack .NamePos{
+        height: 100px;
+        font-size: 18px;
+    }
+
+    .CardBack .NamePos div{
+        margin-top: 20px;
+    }
+
+    .CardBack .PhyInfo{
+        height: 150px;
+        font-size: 18px;
+    }
+
+    .CardBack .PhyInfo div{
+        margin-top: 20px;
+    }
+
+    .CardBack .StatsInfo{
+        height: 60px;
+        font-size: 18px;
+    }
+
+    .CardBack .PhyInfo div{
+        margin-top: 20px;
     }
 }
