--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -159,7 +159,8 @@ transition: 0.5s;
     height: 60px;
     margin: 0;
     padding: 0;
-    background-color: rgba(64, 192, 64, 0.7);
+    background-color: rgba(13,138,240,0.7);
+    color: white;
     border-radius: 8%;
     border: none;
     font-size: 20px;
