--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -1,4 +1,3 @@
-/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .PlayerCard {
     background-color: transparent;
     margin: 15px auto;
@@ -6,7 +5,7 @@
     width: 200px;
     height: 300px;
     border-radius: 10%;
-    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+    perspective: 1000px;
     cursor: pointer;
     transition: 0.4s;
 }
@@ -15,14 +14,13 @@
     background-color: transparent;
     width: 300px;
     height: 400px;
-    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+    perspective: 1000px; 
     border-radius: 10%;
     margin: 10px auto;
     cursor: pointer;
     transition: 0.4s;
 }
 
-/* This container is needed to position the front and back side */
 .CardContent {
 position: relative;
 width: 100%;
@@ -37,18 +35,6 @@ transform-style: preserve-3d;
 transform: rotateY(180deg);
 }
 
-/* Do an horizontal flip when you move the mouse over the flip box container */
-.PlayerCard:hover {
-transform: scale(0.9, 0.9);
-box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 0px -5px 30px 15px rgba(0,0,0,0.22);
-}
-
-.PlayerCardShow:hover{
-    transform: scale(0.9, 0.9);
-    box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 0px -5px 30px 15px rgba(0,0,0,0.22);
-}
-
-/* Position the front and back side */
 .CardFront, .CardBack {
 position: absolute;
 width: 100%;
@@ -77,12 +63,8 @@ width: inherit;
 padding: 20px 0;
 height: 150px;
 object-fit: contain;
-opacity: 0.35;
+opacity: 1;
 transition: 0.5s;
-}
-
-.PlayerCard:hover .CardFront img{
-    opacity: 1;
 }
 
 .CardBack .NamePos{
@@ -168,11 +150,6 @@ transition: 0.5s;
     cursor: pointer;
 }
 
-.CardBack .TeamInfo button:hover{
-    transform: scale(1.1, 1.1);
-    box-shadow: 2px 2px 15px 7px rgba(100, 149, 237, 0.25), -2px -2px 15px 7px rgba(100, 149, 237, 0.22);
-}
-
 @media(min-width: 768px){
     .PlayerCard {
         width: 300px;
@@ -243,6 +220,7 @@ transition: 0.5s;
         width: inherit;
         padding: 20px 0;
         height: 250px;
+        opacity: 0.35;
         object-fit: contain;
     }
 
@@ -271,5 +249,25 @@ transition: 0.5s;
 
     .CardBack .PhyInfo div{
         margin-top: 20px;
+    }
+
+    
+    .PlayerCard:hover .CardFront img{
+        opacity: 1;
+    }
+
+    .CardBack .TeamInfo button:hover{
+        transform: scale(1.1, 1.1);
+        box-shadow: 2px 2px 15px 7px rgba(100, 149, 237, 0.25), -2px -2px 15px 7px rgba(100, 149, 237, 0.22);
+    }
+
+    .PlayerCard:hover {
+        transform: scale(0.9, 0.9);
+        box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 0px -5px 30px 15px rgba(0,0,0,0.22);
+    }
+    
+    .PlayerCardShow:hover{
+        transform: scale(0.9, 0.9);
+        box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 0px -5px 30px 15px rgba(0,0,0,0.22);
     }
 }
